# mcp-server-template

./: CLAUDE.md  README.md  catalog-info.yaml  template.yaml
skeleton/: .env.example  .gitignore  README.md  catalog-info.yaml  package.json  pyproject.toml  tsconfig.json
skeleton/.argo/: ci.yaml
skeleton/.github/: dependabot.yml
skeleton/.github/workflows/: ci.yaml
skeleton/docs/: GETTING_STARTED.md  SECURITY.md  TROUBLESHOOTING.md  architecture.md
skeleton/k8s/: kustomization.yaml  rollout.yaml
skeleton/src/: __init__.py  index.ts  server.py
skeleton/src/prompts/: __init__.py  index.ts
skeleton/src/resources/: __init__.py  index.ts
skeleton/src/tools/: __init__.py  index.ts
skeleton/tests/: __init__.py  server.test.ts  test_server.py
